# ggpohafight

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/apps/hafight/: CMakeLists.txt  CMakeSources.cmake  HAFight.aps  HAFight.rc  animation.h  animator.h  basefighter.cpp  basefighter.h  fighterstate.cpp  fighterstate.h  gamestate.cpp  gamestate.h  ggpo_perfmon.h  hafight.cpp  hafight.h  inputinterpreter.h  main.cpp  raylibrenderer.cpp  raylibrenderer.h  rigidbody.cpp  runner.cpp  runner.h
src/apps/hafight/Animation/: animation.h  animator.cpp
src/apps/hafight/Fighter/: basefighter.h  fighterstates.cpp  fighterstates.h  gameinterfaces.cpp  gameinterfaces.h  inputinterpreter.h
src/apps/hafight/FighterStates/: backwardwalkstate.cpp
src/apps/vectorwar/: CMakeLists.txt  CMakeSources.cmake  gamestate.cpp  gamestate.h  hafight.h  inputreader.cpp  inputreader.h  main.cpp  raylibrenderer.cpp  raylibrenderer.h  runner.cpp
